ADD_LIBRARY (lz4 STATIC
    lz4.c
    lz4hc.c
)

set_property(TARGET lz4 PROPERTY POSITION_INDEPENDENT_CODE ON)

ADD_LIBRARY(lz4::lz4 ALIAS lz4)

IF (NOT BUILD_SHARED_LIBS)
    IF (NOT WITH_SYSTEM_LZ4)
        INSTALL (TARGETS lz4
            ARCHIVE DESTINATION lib
            LIBRARY DESTINATION lib
        )
    ENDIF()
ENDIF()
